# afca

./: Makefile.am  README.md  configure.ac
scripts/: af2apx.py  analyze_apx.py  create-af-scc.py  create-af.py
src/: Makefile.am  Makefile.in  affca.c  clas.c
src/af/: Makefile.am  Makefile.in  af.c  af.h  datatypes.h  preferred_extensions_nc.c  preferred_extensions_nc.h  sort.c  sort.h  stable_extension.c  stable_extension.h  stable_extensions_nc.c  stable_extensions_nc.h  stable_extensions_norris.c  stable_extensions_norris.h  stable_extensions_nourine.c  stable_extensions_nourine.h
src/algorithms/: Makefile.am  closure.c  closure.h  complete.c  complete.h  dc.c  dc.h  node.c  node.h  preferred.c  preferred.h  stable.c  stable.h
src/algorithms/backtracking/: admissible.c  admissible.h
src/algorithms/cbo/: admissible.c  admissible.h  complete.c  complete.h  preferred.c  preferred.h
src/algorithms/connected-components/: cc.c  cc.h  scc.c  scc.h  scc_count.c  scc_preferred.c  wcc.c  wcc.h
src/algorithms/ideal/: ideal.c  ideal.h
src/algorithms/maximal-independent-sets/: mis.c  mis.h
src/algorithms/next-closure/: complete.c  complete.h  complete_2.c  next_closure.c  next_closure.h  preferred.c  preferred.h  stable.c  stable.h
src/algorithms/norris/: stable.c  stable.h  stable_bu.c
src/algorithms/nourine/: implications.c  implications.h  stable.c  stable.h
src/bitset/: Makefile.am  Makefile.in  bitset.c  bitset.h  bitset_hash_map.c  bitset_hash_map.h
src/fca/: Makefile.am  Makefile.in  concept.c  concept.h  context.c  context.h  sorted_context.c  sorted_context.h
src/hashing/: Makefile.am
src/parser/: Makefile.am  Makefile.in  af_parser.c  af_parser.h  apx_lexer.l  apx_parser.y  lex.yy.c  y.tab.c  y.tab.h
src/test/: Makefile.am  Makefile.in  analyze_af.c  test-1.af  test_af.c  test_af_parser.c  test_argument_set.c  test_array_list.c  test_bitset.c  test_bitset_map.c  test_concept.c  test_context.c  test_map.c  test_set.c  test_stable_extension.c  test_stable_extension_norris.c  test_stable_extension_nourine.c
src/utils/: Makefile.am  Makefile.in  argument_set.c  argument_set.h  array_list.c  array_list.h  implication.c  implication.h  linked_list.c  linked_list.h  list.c  list.h  map.h  priority_queue.c  priority_queue.h  queue.c  queue.h  set.h  stack.c  stack.h  timer.h
src/validator/: Makefile.am  validator.c  validator.h
