noinst_LIBRARIES   	= lib_af.a

lib_af_a_SOURCES 	= preferred_extensions_nc.c preferred_extensions_nc.h stable_extensions_nc.c stable_extensions_nc.h stable_extensions_norris.c stable_extensions_norris.h

lib_af_a_LIBADD		= ../bitset/bitset.o ../utils/linked_list.o

CLEANFILES      	= *.o
DISTCLEANFILES  	= .deps Makefile