noinst_LIBRARIES   	= lib_af.a

# lib_af_a_SOURCES 	=  af.c af.h sort.c sort.h
lib_af_a_SOURCES 	=  af.c af.h

# lib_af_a_LIBADD		= ../bitset/bitset.o
lib_af_a_LIBADD		= ../utils/stack.o ../utils/array_list.o ../algorithms/next-closure/complete.o ../utils/queue.o ../utils/implication.o ../utils/linked_list.o

CLEANFILES      	= *.o
DISTCLEANFILES  	= .deps Makefile