bin_PROGRAMS     			= test_af_parser test_bitset test_context test_concept test_stable_extension test_stable_extension_norris

test_af_parser_LDADD		= ../parser/lib_af_parser.a ../fca/lib_fca.a ../bitset/lib_bitset.a
test_bitset_LDADD			= ../bitset/lib_bitset.a
test_context_LDADD			= ../parser/lib_af_parser.a ../fca/lib_fca.a ../bitset/lib_bitset.a
test_concept_LDADD			= ../parser/lib_af_parser.a ../fca/lib_fca.a ../bitset/lib_bitset.a
test_stable_extension_LDADD			= ../parser/lib_af_parser.a ../fca/lib_fca.a ../bitset/lib_bitset.a ../af/lib_af.a
test_stable_extension_norris_LDADD			= ../parser/lib_af_parser.a ../fca/lib_fca.a ../bitset/lib_bitset.a ../af/lib_af.a 

DISTCLEANFILES   			= .deps Makefile
