bin_PROGRAMS     					= test_bitset_map test_map test_set test_af_parser test_af test_bitset test_stable_extension test_stable_extension_norris test_stable_extension_nourine

test_bitset_map_LDADD				= ../hashing/lib_hashing.a ../bitset/lib_bitset.a
test_set_LDADD						= ../hashing/lib_hashing.a
test_map_LDADD						= ../hashing/lib_hashing.a
test_bitset_LDADD					= ../bitset/lib_bitset.a
test_af_parser_LDADD				= ../parser/lib_af_parser.a ../bitset/lib_bitset.a ../af/lib_af.a
test_af_LDADD						= ../parser/lib_af_parser.a ../bitset/lib_bitset.a ../af/lib_af.a
test_stable_extension_LDADD			= ../parser/lib_af_parser.a ../bitset/lib_bitset.a ../af/lib_af.a ../algorithms/lib_algorithms.a
test_stable_extension_norris_LDADD	= ../parser/lib_af_parser.a ../bitset/lib_bitset.a ../af/lib_af.a ../algorithms/lib_algorithms.a
test_stable_extension_nourine_LDADD	= ../parser/lib_af_parser.a ../bitset/lib_bitset.a ../af/lib_af.a ../algorithms/lib_algorithms.a

DISTCLEANFILES   					= .deps Makefile