bin_PROGRAMS     					= test_af_parser test_af test_array_list

test_argument_set_LDADD					= ../utils/libutils.a
test_array_list_LDADD					= ../utils/libutils.a
test_af_parser_LDADD				= ../parser/lib_af_parser.a	../af/lib_af.a
test_af_LDADD						= ../parser/lib_af_parser.a	../af/lib_af.a

DISTCLEANFILES   					= .deps Makefile
