noinst_LIBRARIES   = libutils.a

# libutils_a_SOURCES = timer.h linked_list.h linked_list.c set.h map.h list.h list.c stack.c stack.h
libutils_a_SOURCES = timer.h array_list.h array_list.c stack.c stack.h queue.c queue.h linked_list.c linked_list.h argument_set.h argument_set.c priority_queue.c priority_queue.h implication.c implication.h

CLEANFILES      = *.o
DISTCLEANFILES  = .deps Makefile
